# multimodal-damage-assessment

./: .gitignore  README.md  pyproject.toml  requirements-streamlit.txt  requirements.txt
data/.cd_cache/: post-event.zip.beirut-explosion.json  post-event.zip.noto-earthquake.json  post-event.zip.turkey-earthquake.json  pre-event.zip.beirut-explosion.json  pre-event.zip.noto-earthquake.json  pre-event.zip.turkey-earthquake.json  target.zip.beirut-explosion.json  target.zip.noto-earthquake.json  target.zip.turkey-earthquake.json
docs/: ARCHITECTURE.md  BRIGHT_SUMMARY.md  PRD.md
docs/adr/: ADR-001-task-framing.md  ADR-002-tile-label-derivation.md  ADR-003-validation-strategy.md  ADR-004-backbone-and-sar-adaptation.md  ADR-005-encoder-architecture.md  ADR-006-deployment-and-output.md  README.md
outputs/: turkey_earthquake+beirut_explosion_multimodal_v2_metadata.json  turkey_earthquake+beirut_explosion_optical_only_metadata.json  turkey_earthquake+beirut_explosion_optical_only_v2_metadata.json  turkey_earthquake+noto_earthquake+morocco_earthquake_multimodal_v3_metadata.json  turkey_earthquake+noto_earthquake+morocco_earthquake_optical_only_v3_metadata.json  turkey_earthquake+noto_earthquake_multimodal_v2_metadata.json  turkey_earthquake+noto_earthquake_multimodal_v3_metadata.json  turkey_earthquake+noto_earthquake_optical_only_v2_metadata.json  turkey_earthquake+noto_earthquake_optical_only_v3_metadata.json
scripts/: download_events.py  download_morocco.py  export_inference.py  train_model.py
src/data/: brighT_loader.py
src/models/: baseline_model.py
(+1 files in other folders)
