[tool.poetry]
name = "multimodal-damage-assessment"
version = "0.1.0"
description = "Multimodal Building Damage Assessment with AI"
authors = ["Sabrina Pribadi <sabrinapribadi@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.0"  # This will let Poetry find the latest compatible version
torchvision = ">=0.15.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.14.0"
streamlit = "^1.25.0"
opencv-python = "^4.8.0"
pillow = "^10.0.0"
scikit-learn = "^1.3.0"
python-dotenv = "^1.0.0"
tqdm = "^4.66.0"
rasterio = "^1.3.0"  # For reading GeoTIFF files
tensorboard = "^2.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"